name:                vula-sync
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reuben364/vula-sync#readme
license:             GPL-3
license-file:        LICENSE
author:              Reuben Steenekamp
maintainer:          reuben.steenekamp@gmail.com
copyright:           2017 Reuben Steenekamp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable vula-sync
  exposed-modules:     Main
  other-modules:       Shell
                     , Types
                     , VulaSync
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson >= 1.0 && < 1.1
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , either >= 4.4 && < 4.5
                     , filepath >= 1.4 && < 1.5
                     , directory >= 1.3 && < 1.4
                     , monad-parallel >= 0.7 && < 0.8
                     , mtl >= 2.2 && < 2.3
                     , exceptions >= 0.8 && < 0.9
                     , network-uri >= 2.6 && < 2.7
                     , optparse-applicative >= 0.13 && < 0.14
                     , process >= 1.4 && < 1.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reuben364/vula-sync
